--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -591,29 +591,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 33,
       "id": "ff828581-99ed-444e-80eb-05f2842d1e12",
       "metadata": {
         "id": "ff828581-99ed-444e-80eb-05f2842d1e12"
       },
       "outputs": [],
       "source": [
+        "from posixpath import realpath\n",
         "#si-complex-number\n",
         "\n",
         "class ComplexNumber(object):\n",
-        "  \"\"\"A class defining complex numbers.  Class has 2 parts, Real and Imag\"\"\"\n",
-        "\n",
+        "  \"\"\"A class defining complex numbers.  has 2 parts, Real and Imag. \"\"\"\n",
         "  def init(self, real, imag):\n",
-        "    #a = self.real and b = self.imag\n",
         "    self.real = real\n",
         "    self.imag = imag\n",
-        "  def conjugate(self):\n",
-        "    return ComplexNumber(self.real, -self.imag)\n",
+        "    self.conjugate = conjugate\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "  def __eq__(self,notself):\n",
+        "    a = self\n",
+        "    b = notself\n",
+        "    def conjugate(real,imag):\n",
+        "      a.real + a.imag == b.real-b.imag\n",
+        "      eq_real = a.real == b.real\n",
+        "      eq_imag = a.imag == b.imag\n",
+        "      return True\n",
+        "    def __ne__(self,other):\n",
+        "      return not (a.real == b.real) & (a.imag == b.imag)\n",
+        ""
       ]
     },
     {
