--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -591,35 +591,90 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 39,
       "id": "ff828581-99ed-444e-80eb-05f2842d1e12",
       "metadata": {
-        "id": "ff828581-99ed-444e-80eb-05f2842d1e12"
+        "id": "ff828581-99ed-444e-80eb-05f2842d1e12",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "76a4ca13-4b60-427e-9a5d-c1ca8a92eb25"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test 1: 5 + 6i\n",
+            "test 2: 9 + 4i\n"
+          ]
+        }
+      ],
       "source": [
         "from posixpath import realpath\n",
         "#si-complex-number\n",
         "\n",
         "class ComplexNumber(object):\n",
         "  \"\"\"A class defining complex numbers.  has 2 parts, Real and Imag. \"\"\"\n",
-        "  def init(self, real, imag):\n",
+        "  def __init__(self, real, imag):\n",
         "    self.real = real\n",
         "    self.imag = imag\n",
-        "    self.conjugate = conjugate\n",
         "\n",
-        "  def __eq__(self,notself):\n",
-        "    a = self\n",
-        "    b = notself\n",
-        "    def conjugate(real,imag):\n",
-        "      a.real + a.imag == b.real-b.imag\n",
-        "      eq_real = a.real == b.real\n",
-        "      eq_imag = a.imag == b.imag\n",
-        "      return True\n",
-        "    def __ne__(self,other):\n",
-        "      return not (a.real == b.real) & (a.imag == b.imag)\n",
-        ""
+        "  def conjugate(self):\n",
+        "        return ComplexNumber(self.real, -self.imag)\n",
+        "\n",
+        "  def __abs__(self):\n",
+        "        return (self.real ** 2 + self.imag ** 2) ** 0.5\n",
+        "\n",
+        "  def __lt__(self,other):\n",
+        "    return abs(self)<abs(other)\n",
+        "\n",
+        "  def __gt__(self, other):\n",
+        "        return abs(self) > abs(other)\n",
+        "\n",
+        "  def __str__(self):\n",
+        "        return f\"{self.real} + {self.imag}i\" if self.imag >= 0 else f\"{self.real} - {-self.imag}i\"\n",
+        "\n",
+        "  def __eq__(self, other):\n",
+        "        return self.real == other.real and self.imag == other.imag\n",
+        "\n",
+        "  def __ne__(self, other):\n",
+        "        return not self.__eq__(other)\n",
+        "\n",
+        "  def __add__(self, other):\n",
+        "        return ComplexNumber(self.real + other.real, self.imag + other.imag)\n",
+        "\n",
+        "  def __sub__(self, other):\n",
+        "        return ComplexNumber(self.real - other.real, self.imag - other.imag)\n",
+        "\n",
+        "  def __mul__(self, other):\n",
+        "        real_part = self.real * other.real - self.imag * other.imag\n",
+        "        imag_part = self.real * other.imag + self.imag * other.real\n",
+        "        return ComplexNumber(real_part, imag_part)\n",
+        "\n",
+        "  def __truediv__(self, other):\n",
+        "        denom = other.real ** 2 + other.imag ** 2\n",
+        "        real_part = (self.real * other.real + self.imag * other.imag) / denom\n",
+        "        imag_part = (self.imag * other.real - self.real * other.imag) / denom\n",
+        "        return ComplexNumber(real_part, imag_part)\n",
+        "\n",
+        "test1 = ComplexNumber(5,6)\n",
+        "test2 = ComplexNumber(9,4)\n",
+        "\n",
+        "print(\"test 1:\", test1)\n",
+        "print(\"test 2:\", test2)\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IIe8w79twQeA"
+      },
+      "id": "IIe8w79twQeA",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
