Attempt 1 student records

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -717,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
         "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab"
@@ -725,7 +725,53 @@
       "outputs": [],
       "source": [
         "#si-academic-record\n",
-        "class StudentRecord(object):"
+        "class StudentRecord(object):\n",
+        "  def __init__(self,firstName,lastName,dob,hsName,hsCity,hsState,degree,address,transcript=None):\n",
+        "    self.firstName = firstName\n",
+        "    self.lastName = lastName\n",
+        "    self.dob = dob\n",
+        "    self.hsName = hsName\n",
+        "    self.hsCity = hsCity\n",
+        "    self.hsState = hsState\n",
+        "    self.degree = degree\n",
+        "    self.address = address\n",
+        "    if transcript is None:\n",
+        "      transcript = []\n",
+        "\n",
+        "  def __newCourse__(self,course,year,semester,credits,grade):\n",
+        "    self.course = course\n",
+        "    self.year = year\n",
+        "    self.semester = semester\n",
+        "    self.credits = credits\n",
+        "    self.grade = grade\n",
+        "\n",
+        "  def __cumGPA__(self):\n",
+        "    total_grade_points = sum(course|\"grade\"*course|\"credits\") in self.transcript\n",
+        "    total_credits = sum(course[\"credits\"] for course in self.transcript if \"credits\" in course)\n",
+        "    return round(total_grade_points / total_credits) if total_credits > 0 else 0.0\n",
+        "\n",
+        "  def __semGPA__(self):\n",
+        "    total_grade_points=0\n",
+        "    total_credits=0\n",
+        "    for course in self.transcript:\n",
+        "      if course['year']==self.year and course|\"semester\"==self.semester:\n",
+        "        total_grade_points+=course|[\"grade\"]*course|[\"credits\"]\n",
+        "      total_credits+=course|[\"credits\"]\n",
+        "    return round(total_grade_points/total_credits,2) if total_credits>0 else 0.0\n",
+        "\n",
+        "  def __credits__(self):\n",
+        "    return float(sum(course[\"credits\"]for course in self.transcript))\n",
+        "\n",
+        "  def __scholarship__(self):\n",
+        "    gpa=self.__cumGPA__()\n",
+        "    if gpa>=3.9:\n",
+        "      return \"Full-ride\"\n",
+        "    elif gpa>=3.63:\n",
+        "      return \"Half-tuition\"\n",
+        "    elif gpa>=3.3:\n",
+        "      return \"Quarter-tuition\"\n",
+        "    else:\n",
+        "      return \"Not Eligible\""
       ]
     }
   ],
