Attempt to fix 1st error on student records

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -717,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 70,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
         "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab"
@@ -725,8 +725,17 @@
       "outputs": [],
       "source": [
         "#si-academic-record\n",
+        "\n",
+        "class NewCourse(object):\n",
+        "  def __init__(self, course, year, semester, credits, grade):\n",
+        "    self.course = course\n",
+        "    self.year = year\n",
+        "    self.semester = semester\n",
+        "    self.credits = credits\n",
+        "    self.grade = grade\n",
+        "\n",
         "class StudentRecord(object):\n",
-        "  def __init__(self,firstName,lastName,dob,hsName,hsCity,hsState,degree,address,transcript=None):\n",
+        "  def __init__(self,firstName,lastName,dob,hsName,hsCity,hsState,degree,address):\n",
         "    self.firstName = firstName\n",
         "    self.lastName = lastName\n",
         "    self.dob = dob\n",
@@ -735,15 +744,10 @@
         "    self.hsState = hsState\n",
         "    self.degree = degree\n",
         "    self.address = address\n",
-        "    if transcript is None:\n",
-        "      transcript = []\n",
+        "    self.transcript = []\n",
         "\n",
-        "  def __newCourse__(self,course,year,semester,credits,grade):\n",
-        "    self.course = course\n",
-        "    self.year = year\n",
-        "    self.semester = semester\n",
-        "    self.credits = credits\n",
-        "    self.grade = grade\n",
+        "  def newCourse(self, course, year, semester, credits, grade):\n",
+        "      transcript = []\n",
         "\n",
         "  def __cumGPA__(self):\n",
         "    total_grade_points = sum(course|\"grade\"*course|\"credits\") in self.transcript\n",
