--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -717,12 +717,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 89,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
-        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab"
+        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "107e9daa-863f-47d5-d83b-29ef2b5cd850"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "type object 'StudentRecord' has no attribute 'cumGPA'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-89-2f279d09d119>\u001b[0m in \u001b[0;36m<cell line: 79>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;31m# Pulling Data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Cumulative GPA:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mStudentRecord\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcumGPA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Semester GPA (2032 Spring):\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m__semGPA__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2032\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Spring\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Total Credits:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m__credits__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: type object 'StudentRecord' has no attribute 'cumGPA'"
+          ]
+        }
+      ],
       "source": [
         "#si-academic-record\n",
         "\n",
@@ -746,37 +763,53 @@
         "    self.address = address\n",
         "    self.transcript = []\n",
         "\n",
-        "  def newCourse(self, course, year, semester, credits, grade):\n",
-        "      transcript = []\n",
-        "\n",
         "  def __cumGPA__(self):\n",
-        "    total_grade_points = sum(course|\"grade\"*course|\"credits\") in self.transcript\n",
-        "    total_credits = sum(course[\"credits\"] for course in self.transcript if \"credits\" in course)\n",
-        "    return round(total_grade_points / total_credits) if total_credits > 0 else 0.0\n",
+        "        total_credits = sum(course.credits for course in self.transcript)\n",
+        "        total_gpa_points = sum(course.grade * course.credits for course in self.transcript)\n",
+        "        if total_credits == 0:\n",
+        "            return 0.0\n",
+        "        return total_gpa_points / total_credits\n",
         "\n",
-        "  def __semGPA__(self):\n",
-        "    total_grade_points=0\n",
-        "    total_credits=0\n",
-        "    for course in self.transcript:\n",
-        "      if course['year']==self.year and course|\"semester\"==self.semester:\n",
-        "        total_grade_points+=course|[\"grade\"]*course|[\"credits\"]\n",
-        "      total_credits+=course|[\"credits\"]\n",
-        "    return round(total_grade_points/total_credits,2) if total_credits>0 else 0.0\n",
+        "  def __semGPA__(self, year, semester):\n",
+        "        semester_courses = [course for course in self.transcript if course.year == year and course.semester == semester]\n",
+        "        total_credits = sum(course.credits for course in semester_courses)\n",
+        "        total_gpa_points = sum(course.grade * course.credits for course in semester_courses)\n",
+        "\n",
+        "        if total_credits == 0:\n",
+        "            return 0.0\n",
+        "\n",
+        "        return total_gpa_points / total_credits\n",
         "\n",
         "  def __credits__(self):\n",
-        "    return float(sum(course[\"credits\"]for course in self.transcript))\n",
+        "        return sum(course.credits for course in self.transcript)\n",
+        "\n",
+        "  def __newCourse__(self, course, year, semester, credits, grade):\n",
+        "        new_course = Course(course, year, semester, credits, grade)\n",
+        "        self.transcript.append(new_course)\n",
         "\n",
         "  def __scholarship__(self):\n",
-        "    gpa=self.__cumGPA__()\n",
-        "    if gpa>=3.9:\n",
-        "      return \"Full-ride\"\n",
-        "    elif gpa>=3.63:\n",
-        "      return \"Half-tuition\"\n",
-        "    elif gpa>=3.3:\n",
-        "      return \"Quarter-tuition\"\n",
-        "    else:\n",
-        "      return \"Not Eligible\""
+        "        gpa = self.cumGPA()\n",
+        "        if gpa >= 3.9:\n",
+        "            return \"Full-ride\"\n",
+        "        elif gpa >= 3.63:\n",
+        "            return \"Half-tuition\"\n",
+        "        elif gpa >= 3.3:\n",
+        "            return \"Quarter-tuition\"\n",
+        "        else:\n",
+        "            return \"Not Eligible\"\n",
+        "\n",
+        "  def __str__(self):\n",
+        "        return f\"Student: {self.firstName} {self.lastName}, Degree: {self.degree}, GPA: {self.cumGPA():.2f}\"\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "l1CTSEyE-pPL"
+      },
+      "id": "l1CTSEyE-pPL"
     }
   ],
   "metadata": {
