--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -717,77 +717,87 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 109,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
         "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "107e9daa-863f-47d5-d83b-29ef2b5cd850"
+        "outputId": "0e7eb61c-045e-4d0d-ee22-5c4c34fc0205"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "type object 'StudentRecord' has no attribute 'cumGPA'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-89-2f279d09d119>\u001b[0m in \u001b[0;36m<cell line: 79>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;31m# Pulling Data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Cumulative GPA:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mStudentRecord\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcumGPA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Semester GPA (2032 Spring):\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m__semGPA__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2032\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Spring\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Total Credits:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m__credits__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: type object 'StudentRecord' has no attribute 'cumGPA'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Student: Teresa Testerson\n",
+            "DOB: 1980-11-21\n",
+            "Degree: Existing\n",
+            "Address: 123 Test St, Testcity, TEST\n",
+            "Transcript:\n",
+            "Testing (Fall 2020) - 4 credits: Grade 3.0\n",
+            "Typing (Fall 2020) - 4 credits: Grade 3.3\n",
+            "Sleeping (Spring 2020) - 3 credits: Grade 3.0\n",
+            "Snacking (Spring 2024) - 3 credits: Grade 4.0\n",
+            "Cumulative GPA: 3.3000000000000003\n",
+            "Spring 2020 GPA: 3.0\n",
+            "Total Credits: 14\n",
+            "Scholarship Eligibility: Quarter-tuition\n"
           ]
         }
       ],
       "source": [
         "#si-academic-record\n",
         "\n",
-        "class NewCourse(object):\n",
-        "  def __init__(self, course, year, semester, credits, grade):\n",
-        "    self.course = course\n",
-        "    self.year = year\n",
-        "    self.semester = semester\n",
-        "    self.credits = credits\n",
-        "    self.grade = grade\n",
+        "class Course(object):\n",
+        "    def __init__(self, courseName, year, semester, credits, grade):\n",
+        "        self.courseName = courseName\n",
+        "        self.year = year\n",
+        "        self.semester = semester\n",
+        "        self.credits = credits\n",
+        "        self.grade = grade\n",
         "\n",
-        "class StudentRecord(object):\n",
-        "  def __init__(self,firstName,lastName,dob,hsName,hsCity,hsState,degree,address):\n",
-        "    self.firstName = firstName\n",
-        "    self.lastName = lastName\n",
-        "    self.dob = dob\n",
-        "    self.hsName = hsName\n",
-        "    self.hsCity = hsCity\n",
-        "    self.hsState = hsState\n",
-        "    self.degree = degree\n",
-        "    self.address = address\n",
-        "    self.transcript = []\n",
+        "    def __repr__(self):\n",
+        "        return f\"{self.courseName} ({self.semester} {self.year}) - {self.credits} credits: Grade {self.grade}\"\n",
         "\n",
-        "  def __cumGPA__(self):\n",
-        "        total_credits = sum(course.credits for course in self.transcript)\n",
-        "        total_gpa_points = sum(course.grade * course.credits for course in self.transcript)\n",
-        "        if total_credits == 0:\n",
-        "            return 0.0\n",
-        "        return total_gpa_points / total_credits\n",
+        "class StudentRecord:\n",
+        "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address):\n",
+        "        self.firstName = firstName\n",
+        "        self.lastName = lastName\n",
+        "        self.dob = dob\n",
+        "        self.hsName = hsName\n",
+        "        self.hsCity = hsCity\n",
+        "        self.hsState = hsState\n",
+        "        self.degree = degree\n",
+        "        self.address = address\n",
+        "        self.transcript = []\n",
         "\n",
-        "  def __semGPA__(self, year, semester):\n",
-        "        semester_courses = [course for course in self.transcript if course.year == year and course.semester == semester]\n",
-        "        total_credits = sum(course.credits for course in semester_courses)\n",
-        "        total_gpa_points = sum(course.grade * course.credits for course in semester_courses)\n",
-        "\n",
-        "        if total_credits == 0:\n",
-        "            return 0.0\n",
-        "\n",
-        "        return total_gpa_points / total_credits\n",
-        "\n",
-        "  def __credits__(self):\n",
-        "        return sum(course.credits for course in self.transcript)\n",
-        "\n",
-        "  def __newCourse__(self, course, year, semester, credits, grade):\n",
-        "        new_course = Course(course, year, semester, credits, grade)\n",
+        "    def newCourse(self, courseName, year, semester, credits, grade):\n",
+        "        new_course = Course(courseName, year, semester, credits, grade)\n",
         "        self.transcript.append(new_course)\n",
         "\n",
-        "  def __scholarship__(self):\n",
+        "    def cumGPA(self):\n",
+        "        total_credits = 0\n",
+        "        total_points = 0\n",
+        "        for course in self.transcript:\n",
+        "            total_credits += course.credits\n",
+        "            total_points += course.credits * course.grade\n",
+        "        return total_points / total_credits if total_credits > 0 else 0.0\n",
+        "\n",
+        "    def semGPA(self, year, semester):\n",
+        "        total_credits = 0\n",
+        "        total_points = 0\n",
+        "        for course in self.transcript:\n",
+        "            if course.year == year and course.semester == semester:\n",
+        "                total_credits += course.credits\n",
+        "                total_points += course.credits * course.grade\n",
+        "        return total_points / total_credits if total_credits > 0 else 0.0\n",
+        "\n",
+        "    def credits(self):\n",
+        "        return sum(course.credits for course in self.transcript)\n",
+        "\n",
+        "    def scholarship(self):\n",
         "        gpa = self.cumGPA()\n",
         "        if gpa >= 3.9:\n",
         "            return \"Full-ride\"\n",
@@ -798,10 +808,39 @@
         "        else:\n",
         "            return \"Not Eligible\"\n",
         "\n",
-        "  def __str__(self):\n",
-        "        return f\"Student: {self.firstName} {self.lastName}, Degree: {self.degree}, GPA: {self.cumGPA():.2f}\"\n",
-        "\n"
+        "    def __repr__(self):\n",
+        "        return f\"Student: {self.firstName} {self.lastName}\\nDOB: {self.dob}\\nDegree: {self.degree}\\nAddress: {self.address}\\nTranscript:\\n\" + \"\\n\".join([str(course) for course in self.transcript])\n",
+        "\n",
+        "student = StudentRecord(\n",
+        "    firstName=\"Teresa\", lastName=\"Testerson\", dob=\"1980-11-21\",\n",
+        "    hsName=\"Testschool\", hsCity=\"Testcity\", hsState=\"TEST\",\n",
+        "    degree=\"Existing\", address=\"123 Test St, Testcity, TEST\"\n",
+        ")\n",
+        "student.newCourse(\"Testing\", 2020, \"Fall\", 4, 3.0)\n",
+        "student.newCourse(\"Typing\", 2020, \"Fall\", 4, 3.3)\n",
+        "student.newCourse(\"Sleeping\", 2020, \"Spring\", 3, 3.0)\n",
+        "student.newCourse(\"Snacking\", 2024, \"Spring\", 3, 4.0)\n",
+        "\n",
+        "print(student)\n",
+        "\n",
+        "print(\"Cumulative GPA:\", student.cumGPA())\n",
+        "\n",
+        "print(\"Spring 2020 GPA:\", student.semGPA(2020, \"Spring\"))\n",
+        "\n",
+        "print(\"Total Credits:\", student.credits())\n",
+        "\n",
+        "print(\"Scholarship Eligibility:\", student.scholarship())\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-xDV52APDd-8"
+      },
+      "id": "-xDV52APDd-8",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
